fix overlapping copy/checkmark icons on report detail page

--- a/myApp/www/css/style.css
+++ b/myApp/www/css/style.css
@@ -30,9 +30,11 @@
 .item-icon-right .icon.ion-checkmark-circled {
   top: 20px;
   align-items: flex-start;
+  height: 25%
 }
 
 .item-icon-right .icon.ion-ios-copy {
-  top: -20px;
+  top: 115px;
   align-items: flex-end;
+  height: 25%
 }
